Some on charge.dartfl

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.samohseni.parto_v">
+    <uses-permission android:name="android.permission.INTERNET" />
    <application
-        android:label="parto_v"
+        android:label="پرداخت پرتو"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
