--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_barcode_scanner:
   barcode_scan_fork:
   material_design_icons_flutter:
+  uni_links:
 
 
 dev_dependencies:
