--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   barcode_scan_fork:
   material_design_icons_flutter:
   uni_links:
+  image_picker_saver:
 
 
 dev_dependencies:
@@ -86,6 +87,7 @@ flutter:
     - assets/images/man.png
     - assets/images/woman.png
     - assets/images/3g4g5g.png
+    - assets/images/charge.png
     - assets/images/sim-Charge.png
     - assets/images/ghobooz2.png
     - assets/images/logo/Ab-color.jpg
