--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.1+2
+version: 1.0.1+3
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -89,7 +89,7 @@ flutter:
     - assets/images/3g4g5g.png
     - assets/images/charge.png
     - assets/images/sim-Charge.png
-    - assets/images/ghobooz2.png
+    - assets/images/ghobooz3.png
     - assets/images/logo/Ab-color.jpg
     - assets/images/logo/Bargh-gray.jpg
     - assets/images/logo/gaz-color.jpg
@@ -105,6 +105,10 @@ flutter:
     - assets/images/logo/shahrdary-gray.jpg
     - assets/images/logo/shahrdary-color.jpg
     - assets/images/Donation.png
+    - assets/images/internet.png
+    - assets/images/donation2.png
+
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
