--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,12 +47,13 @@ dependencies:
   share:
   share_files_and_screenshot_widgets:
   sentry_flutter:
-  flutter_barcode_scanner:
-  barcode_scan_fork:
+  #flutter_barcode_scanner:
+  #barcode_scan_fork:
   material_design_icons_flutter:
   uni_links:
   image_picker_saver:
   firebase_messaging:
+  camerakit:
 
 
 dev_dependencies:
