--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,13 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter
+  flutter_launcher_icons:
 
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logo.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -114,6 +120,7 @@ flutter:
     - assets/images/donation2.png
     - assets/images/4GPackages.png
     - assets/images/wallet-png.png
+    - assets/logo.png
 
 
   #4GPackages.png
