--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,7 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/logo.png"
+  image_path: "assets/fanava-icon.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -124,6 +124,8 @@ flutter:
     - assets/images/4GPackages.png
     - assets/images/wallet-png.png
     - assets/logo.png
+    - assets/fanava-icon.png
+    - assets/fanava-logo.png
 
 
   #4GPackages.png
